--- a/catkin_ws/src/sensor_pkg/CMakeLists.txt
+++ b/catkin_ws/src/sensor_pkg/CMakeLists.txt
@@ -47,15 +47,16 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
- add_message_files(
+add_message_files(
    FILES
    GPSDATA_MSG.msg
- )
+   USMOD_MSG.msg
+)
 
 ## Generate services in the 'srv' folder
 #add_service_files(
-#  FILES
-#  i2c_service.srv
+# FILES
+# i2c_service.srv
 #)
 
 ## Generate actions in the 'action' folder
@@ -66,10 +67,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
- generate_messages(
+generate_messages(
    DEPENDENCIES
    std_msgs
- )
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -103,7 +104,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES sensor_pkg
-  CATKIN_DEPENDS rospy std_msgs message_runtime
+  CATKIN_DEPENDS rospy std_msgs message_runtime 
 #  DEPENDS system_lib
 )
 
